Shading: Voronoi Texture "Distance To Edge" is broken in 1D case #79803

Closed
opened 2020-08-15 14:48:21 +02:00 by Alexander Meißner · 6 comments

Broken: 2.83.4, 2.90, 50b435cba
Worked: Never

Operating System: macOS 10.13.6

When setting the feature of a 1D Voronoi Texture Node to "Distance To Edge", it produces the same output as "F1", the distance to the closest feature point. However, that is mathematically completely wrong. The distance to the edge and the feature point are two different things even in 1D. I attached a blend file to quickly draw their function graphs in a shader and also attached two images:

The current result VoronoiFaulty.png
The expected result VoronoiExpected.png

Notice how the maxima of the distance to the closest feature point align with the minima of the distance to the edge.

Voronoi.blend

Broken: 2.83.4, 2.90, 50b435cba Worked: Never Operating System: macOS 10.13.6 When setting the feature of a 1D Voronoi Texture Node to "Distance To Edge", it produces the same output as "F1", the distance to the closest feature point. However, that is mathematically completely wrong. The distance to the edge and the feature point are two different things even in 1D. I attached a blend file to quickly draw their function graphs in a shader and also attached two images: The current result ![VoronoiFaulty.png](https://archive.blender.org/developer/F8783488/VoronoiFaulty.png) The expected result ![VoronoiExpected.png](https://archive.blender.org/developer/F8783486/VoronoiExpected.png) Notice how the maxima of the distance to the closest feature point align with the minima of the distance to the edge. [Voronoi.blend](https://archive.blender.org/developer/F8783497/Voronoi.blend)

Added subscriber: @Lichtso

Added subscriber: @Lichtso

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/cycles@7f5d86c431

This issue was referenced by blender/cycles@7f5d86c43150628588d9173076f3c88b4ab5d720

This issue was referenced by 340cbc7f15

This issue was referenced by 340cbc7f153737fbd228bdf35b0cabb450decb1f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Robert Guetzkow self-assigned this 2020-12-02 12:10:13 +01:00
Robert Guetzkow removed their assignment 2020-12-02 12:10:32 +01:00
Omar Emara was assigned by Robert Guetzkow 2020-12-02 12:10:32 +01:00

Added subscriber: @rjg

Added subscriber: @rjg
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79803
No description provided.